v138
    -Add zip reduce filter, not active.
    -Fix shrink filter.
    -Add zip implode filter, not active.
    -Move data statistic in to Codec.
    -Cosmetic change to type info.    
    -Fix silent transform fails, decompress not identical.
    -Fixes in SZDD parser.
    -In tiff parser ignore image if compressed and tag 279 is missing.
v137
    -Show count of files in tar parser.
    -Fix iso parser for large files (+4G).
    -Fix mdf parser.
    -Fix cd parser.
    -Cleanup compare/extract log. Show final summary.
    -Add shrink/unshrink filter for .zip
    -Fix tiff parser.
    -Fix zip parser.
v136
    -Add InstallShield CAB parser (ver 5), contains zlib streams.
     Active for extension .cab
    -Add virutal file group for .cab extension
    -In PDFLzwParser add JPXDecode and JBIG2Decode as CMP type.
    -Re-enable .zip based extension parser
    -Add .tga based extension parser
    -In zip parser extract file extension and allow uncompressed files
    -In szddparser set min lenght to 128 bytes.
    -Fix bad parsing in mrbparser.
v135
    -In zlib parser set priority to 3 if possible image header was detected.
    -In iso parser show info about how many files are there.
v134
    -In png parser detect iCCP compressed chunk, test for grayscale
    -Add iso 9960 parser. Active for extension .iso
    -Cleanup and small fixes
    -Fix pdfbiparser, set min width limit to >1
    -Disable pre- and post-filter (WRT) for streams 8 and 9.
     In rare cases, the result will not be identical.
    -In the ISO parser, make sure there are no previous folder entries.
v133
    -In mdf parser set minimum length to 4 sectors
    -Change text parser
    -Reset info text in zlib parser
    -Fix wrong info when MT is not defined
    -Remove some text related code from codec
    -No parser outputs BINTEXT, ISOTEXT so disable in most places
v132
    -Disable zip extension. If files are stored, the contents will not be recognized.
    -Limit gzip min size to 6.