@@ -3,12 +3,15 @@
 #include <cstdint>
 #include <vector>
 
-// In pdf stream detect only /LZWDecode /JPXDecode /JBIG2Decode
-// report as type CMP
+// In pdf stream detect only /LZWDecode /JPXDecode /JBIG2Decode /FlateDecode
+// report as type CMP and 
+// ZLIB for /FlateDecode if there is no /Width value
 // no /ASCII85Decode /LZWDecode combo, etc
 class PDFLzwParser: public Parser {
     uint64_t pLzwp;
     uint64_t info;
+    uint64_t imagePos, lenghtPos;
+    uint32_t lenght;
     uint32_t buf0, buf1, buf2, buf3, buf4;
     uint64_t i;
     Filetype type;
